# auditor

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: test.yml
.sqlx/: query-2c1516a6369c768ab46f387a07fbbc5cc70a99274d61a91fe58c1c68967021fd.json  query-48aa9e72ae8e59e087e36e33cdb1c6f62cfc1972ce91d3653d44fc9557298bac.json  query-c762b5bb01091f31e2b54a2ec6d66a745290eec285090334e15c881676609ff7.json  query-c961b42c93e3a86e2eadd58c4e3b132f6f08bc2929dad39f3c5b1ff443ca6930.json  query-e531ecec86bd9bb937fa5247ab62edae1aacfafec794e18993939a230d96e9f5.json
migrations/: 20240714180856_add_audit_logs.down.sql  20240714180856_add_audit_logs.up.sql
src/: db_util.rs  main.rs  parser.rs  search.rs  server.rs  watcher.rs
static/: index.html
