[package]
name = "auditor"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
notify = "6"
anyhow = "1"
actix-web = "4.6"
actix-rt = "2.9"
actix-files = "0.6"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
dotenvy = "0.15"
sqlx = { version = "^0.7", features = [
    "runtime-tokio",
    "tls-rustls",
    "sqlite",
    "migrate",
    "macros",
    "chrono",
] }
regex = "1.10.5"

[profile.release]
debug = false
lto = true
opt-level = 3
